# potential-journey

./: .gitignore  QUICKSTART.md  README.md  SAMPLE_OUTPUTS.md  pyproject.toml  requirements.txt
scripts/: run_2025.py
src/war_f1/: __init__.py  data_fetch.py  models_pace.py  models_results.py  prep.py  report.py  simulate.py
