[project]
name = "war-f1"
version = "0.1.0"
description = "Formula 1 Wins Above Replacement metric pipeline"
requires-python = ">=3.9"
dependencies = [
    "fastf1>=3.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pymc>=5.10.0",
    "arviz>=0.17.0",
    "matplotlib>=3.7.0",
    "scipy>=1.11.0",
    "pytensor>=2.18.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "polars>=0.20.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
